--- a/index.html
+++ b/index.html
@@ -4,31 +4,44 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
+  <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   
-  <title>Frontend Mentor | Blog preview card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  
+  <title>Ahmed Ashkir | Blog preview card</title>
 </head>
 <body>
 
-  Learning
+  <main>
 
-  Published 21 Dec 2023
+    <article class="card">
 
-  HTML & CSS foundations
+      <img src="./assets/images/illustration-article.svg" alt="a random Illustration" class="card-image" />
 
-  These languages are the backbone of every website, defining structure, content, and presentation.
+      <strong class="tag">Learning</strong>
 
-  Greg Hooper
-  
-  <div class="attribution">
+      <time>Published 21 Dec 2023</time>
+
+      <a href="#" class="card-header">HTML & CSS foundations</a>
+
+      <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
+
+      <div class="author-info">
+
+        <img src="./assets/images/image-avatar.webp" alt="Avatar of Greg Hooper" class="avatar" />
+
+        <strong class="author">Greg Hooper</strong>
+
+      </div>
+
+    </article>
+    
+  </main>
+
+  <footer class="attribution hidden">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </footer>
 </body>
 </html>
