--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
     <article class="card">
 
-      <img src="./assets/images/illustration-article.svg" alt="a random Illustration" class="card-image" />
+      <section class="card-image-wrapper">
+        <img src="./assets/images/illustration-article.svg" alt="a random Illustration" class="card-image" />
+      </section>
 
       <strong class="tag">Learning</strong>
 
