--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
       <time>Published 21 Dec 2023</time>
 
-      <a href="#" class="card-header">HTML & CSS foundations</a>
-
+      <h1><a href="#" class="card-header">HTML &amp; CSS foundations</a></h1>
+      
       <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
 
       <div class="author-info">
